home page design

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,37 +1,93 @@
 extends layout
 
 block content
-    h1.display-4.m-b-2 #{title} - Know Your Content
-    h2 Images
-    label Number of Pictures: 0
-    h2 Music
-    table
-        thead
-            tr: th Number of Songs: #{mediaCount}
-                th Number of Albums: #{nAlbums}
-                th Number of Albums with less than 5 songs:
-                th Number of Artists:
+    .container-fluid
+        .row
+            .container
+                .jumbotron
+                    h1 #{title} - Know Your Content
+        .row
+            .col
+                .container-fluid
+                    h4 Home
+                    ul.nav.flex-column
+                        li.nav-item
+                            a.nav-link(href='#') Images
+                        li.nav-item
+                            a.nav-link(href='#') Music
+                        li.nav-item
+                            a.nav-link(href='#') Videos
+                        li.nav-item
+                            a.nav-link(href='#') Work
+            .col-sm-9
+                .container-fluid
+                    //-.jumbotron
+                        h1 #{title} - Know Your Content
+                    nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
+                        form.form-inline(action='/action_page.php')
+                            input.form-control.mr-sm-4(type='text', placeholder='C:/media')
+                            button.btn.btn-success(type='submit') Analyze
+                    p
+                    .card-deck
+                        .card.bg-primary
+                            .card-body.text-center
+                                h2.card-text Images
+                                p
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                                p.card-text Number of Pictures: 0
+                        .card.bg-warning
+                            .card-body.text-center
+                                h2.card-text Music
+                                p
+                                p.card-text Number of Songs: #{mediaCount}
+                                p.card-text Number of Albums: #{nAlbums}
+                                p.card-text Albums with few songs: 0
+                                p.card-text Number of Artists: 0
+                                p.card-text Albums with few songs: 0
+                                p.card-text Number of Artists: 0
+                                p.card-text Albums with few songs: 0
+                                p.card-text Number of Artists: 0
+                        .card.bg-success
+                            .card-body.text-center
+                                h2.card-text Videos
+                                p
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                                p.card-text Number of Movies: 0
+                        .card.bg-danger
+                            .card-body.text-center
+                                h2.card-text Work
+                                p
+                                p.card-text Number of Text Files: 0
+                                p.card-text Number of Spreadsheets: 0
+                                p.card-text Number of Presentations: 0
+                                p.card-text Number of files: 0
+                                p.card-text Number of Text Files: 0
+                                p.card-text Number of Spreadsheets: 0
+                                p.card-text Number of Presentations: 0
+                                p.card-text Number of files: 0
 
-        table
-            thead
-                td: form(method='GET' action='/album')
-                    button.btn.btn-primary(type='submit') Organize Albums
-                    button.btn.btn-primary(type='submit') Create Playlist
-    p Toggle by decade, genre, mood
-    h2 Video
-    label Number of Movies: 0
 
-    h2 Work
-    table
-        thead
-            tr: th Number of Text Files: 0
-                th Number of Spreadsheets: 0
-                th NNumber of Presentations: 0
-                th Number of files:
-    p
-    h2 Analyze
-    form(method='POST' action='/ingest')
-      div.form-group
-        label(for='folderPath') Folder path:
-        input#folderPath.form-control(type='text', placeholder='C:/media' name='folderPath')
-      button.btn.btn-primary(type='submit') Analyze
+                    //- button.btn.btn-primary(type='submit') Organize Albums
+                      button.btn.btn-primary(type='submit') Create Playlist
+                    //- p.bg-danger.text-white TODO Toggle by decade, genre, mood
+
+
+                    //-h2 Analyze
+                    //-form(method='POST' action='/ingest')
+                      div.form-group
+                        label(for='folderPath') Folder path:
+                        input#folderPath.form-control(type='text', placeholder='C:/media' name='folderPath')
+                      button.btn.btn-primary(type='submit') Analyze
+            .col
