--- a/views/albumItem.pug
+++ b/views/albumItem.pug
@@ -1,40 +1,35 @@
-canvas#myChart(width='200', height='200')
-script(src='/javascripts/Chart.js')
-script.
-    var ctx = document.getElementById("myChart").getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-            datasets: [{
-                label: '# of Votes',
-                data: [12, 19, 3, 5, 2, 3],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(75, 192, 192, 0.2)',
-                    'rgba(153, 102, 255, 0.2)',
-                    'rgba(255, 159, 64, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255,99,132,1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(75, 192, 192, 1)',
-                    'rgba(153, 102, 255, 1)',
-                    'rgba(255, 159, 64, 1)'
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero:true
-                    }
-                }]
-            }
-        }
-    });
+extends layout
+
+block content
+    .container-fluid
+        .row
+            .container
+                .jumbotron
+                    h2 #{title} - Know Your Music
+    .container-fluid
+        ul.breadcrumb
+            li.breadcrumb-item
+                a(href='/') Home
+            li.breadcrumb-item
+                a(href='#') Music
+            li.breadcrumb-item
+                a(href='#') Albums
+            li.breadcrumb-item
+                a(href='#') Album #1
+        .container-fluid
+            img(src=myPic, alt='Smiley face', height='400', width='400')
+            //label#source #{pic}
+            //script(type='text/javascript').
+            //    console.log(pic);
+                // var image = #{pic};
+                //
+                // if (image) {
+                //     var base64String = "";
+                //     for (var i = 0; i < image.imageBuffer.data.length; i++) {
+                //         base64String += String.fromCharCode(image.imageBuffer.data[i]);
+                //     }
+                //     var base64 = "data:" + image.mime + ";base64," +  window.btoa(base64String);
+                //     document.getElementById('albumcover').setAttribute('src', base64);
+                // } else {
+                //     document.getElementById('albumcover').style.display = "none";
+                // }
