--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ block content
                         li.nav-item
                             a.nav-link(href='#') Images
                         li.nav-item
-                            a.nav-link(href='#') Music
+                            a.nav-link(href='/album') Music
                         li.nav-item
                             a.nav-link(href='#') Videos
                         li.nav-item
@@ -24,55 +24,44 @@ block content
                     //-.jumbotron
                         h1 #{title} - Know Your Content
                     nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
-                        form.form-inline(action='/action_page.php')
+                        form.form-inline(action='/analyze')
                             input.form-control.mr-sm-4(type='text', placeholder='C:/media')
                             button.btn.btn-success(type='submit') Analyze
                     p
                     .card-deck
                         .card.bg-primary
                             .card-body.text-center
-                                h2.card-text Images
+                                //h2.card-text Images
+                                img(src='/images/photo.png', alt='Music', width='80', height='80')
                                 p
-                                p.card-text Number of Pictures: 0
-                                p.card-text Number of Pictures: 0
-                                p.card-text Number of Pictures: 0
-                                p.card-text Number of Pictures: 0
                                 p.card-text Number of Pictures: 0
                                 p.card-text Number of Pictures: 0
                                 p.card-text Number of Pictures: 0
                                 p.card-text Number of Pictures: 0
                         .card.bg-warning
                             .card-body.text-center
-                                h2.card-text Music
+                                //h2.card-text Music
+                                img(src='/images/music.png', alt='Music', width='80', height='80')
                                 p
                                 p.card-text Number of Songs: #{mediaCount}
-                                p.card-text Number of Albums: #{nAlbums}
-                                p.card-text Albums with few songs: 0
-                                p.card-text Number of Artists: 0
-                                p.card-text Albums with few songs: 0
-                                p.card-text Number of Artists: 0
+                                p.card-text
+                                    a.nav-link(href='/album') Number of Albums: #{nAlbums}
                                 p.card-text Albums with few songs: 0
                                 p.card-text Number of Artists: 0
                         .card.bg-success
                             .card-body.text-center
-                                h2.card-text Videos
+                                //h2.card-text Videos
+                                img(src='/images/video.png', alt='Music', width='80', height='80')
                                 p
-                                p.card-text Number of Movies: 0
-                                p.card-text Number of Movies: 0
-                                p.card-text Number of Movies: 0
-                                p.card-text Number of Movies: 0
                                 p.card-text Number of Movies: 0
                                 p.card-text Number of Movies: 0
                                 p.card-text Number of Movies: 0
                                 p.card-text Number of Movies: 0
                         .card.bg-danger
                             .card-body.text-center
-                                h2.card-text Work
+                                //h2.card-text Work
+                                img(src='/images/work.png', alt='Music', width='80', height='80')
                                 p
-                                p.card-text Number of Text Files: 0
-                                p.card-text Number of Spreadsheets: 0
-                                p.card-text Number of Presentations: 0
-                                p.card-text Number of files: 0
                                 p.card-text Number of Text Files: 0
                                 p.card-text Number of Spreadsheets: 0
                                 p.card-text Number of Presentations: 0
